// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConfigPanel snapshot > disables all controls while busy 1`] = `
"<section class="card" aria-busy="true">
  <div class="card-head">
    <h2>Configuration</h2>
    <div class="row gap"><button class="btn btn-small" disabled=""> Re-read </button><button class="btn btn-small"> Export </button><button class="btn btn-small">Import</button><button class="btn btn-small btn-primary" disabled=""> Apply all to device </button><input type="file" accept="application/json,.json" hidden=""></div>
  </div><label class="field"><span>Operating mode</span><select class="control" disabled="" value="2">
      <option value="0">MIDI Program Change (PC)</option>
      <option value="1">MIDI Control Change (CC)</option>
      <option value="2">Custom (WIP)</option>
      <option value="3">Advanced Custom (WIP)</option>
      <option value="4">Manufacturer Control (WIP)</option>
      <option value="5">Touch Screen (Android) (WIP)</option>
      <option value="6">Video Control</option>
      <option value="7">Keyboard A</option>
      <option value="8">Keyboard B</option>
      <option value="9">Music Player Control</option>
      <option value="10">Custom Keyboard (WIP)</option>
      <option value="11">Mix Key (WIP)</option>
      <option value="12">Speaker (WIP)</option>
    </select></label><!-- ---- mode-specific sub-view ---- -->
  <div class="mode-view">
    <p class="mode-info">Each footswitch sends its own CC number. Toggling sends CC(n,1) on press and CC(n,0) on release.</p>
    <!--v-if-->
    <!-- Program Change A / B -->
    <!-- Custom -->
    <div class="grid grid-4"><label class="field"><span>Footswitch A</span>
        <div class="row gap"><input class="control" type="number" min="0" max="127" placeholder="CC" disabled="" value="10"><select class="control" disabled="" value="0">
            <option value="0">Momentary</option>
            <option value="1">Latching</option>
          </select></div>
      </label><label class="field"><span>Footswitch B</span>
        <div class="row gap"><input class="control" type="number" min="0" max="127" placeholder="CC" disabled="" value="20"><select class="control" disabled="" value="1">
            <option value="0">Momentary</option>
            <option value="1">Latching</option>
          </select></div>
      </label><label class="field"><span>Footswitch C</span>
        <div class="row gap"><input class="control" type="number" min="0" max="127" placeholder="CC" disabled="" value="30"><select class="control" disabled="" value="0">
            <option value="0">Momentary</option>
            <option value="1">Latching</option>
          </select></div>
      </label><label class="field"><span>Footswitch D</span>
        <div class="row gap"><input class="control" type="number" min="0" max="127" placeholder="CC" disabled="" value="40"><select class="control" disabled="" value="1">
            <option value="0">Momentary</option>
            <option value="1">Latching</option>
          </select></div>
      </label></div>
    <p class="muted small note"> Press sends CC(n,1), release sends CC(n,0). The device stores a fifth CC slot with no documented footswitch; it is left untouched. </p>
  </div><!-- ---- device-wide settings ---- -->
  <h3>Device-wide settings</h3>
  <div class="grid"><label class="field"><span>MIDI channel</span><select class="control" disabled="" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
        <option value="9">9</option>
        <option value="10">10</option>
        <option value="11">11</option>
        <option value="12">12</option>
        <option value="13">13</option>
        <option value="14">14</option>
        <option value="15">15</option>
        <option value="16">16</option>
      </select></label><label class="field"><span>Max groups</span><select class="control" disabled="" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
      </select></label>
    <div class="field"><span>TRS jack</span>
      <div class="row gap radio-row"><label class="row small"><input type="radio" name="trs-jack" disabled=""> Expression pedal </label><label class="row small"><input type="radio" name="trs-jack" disabled=""> TRS-MIDI </label></div>
    </div><label class="field row"><span>Reverse polarity</span><input type="checkbox" class="switch" disabled=""></label>
  </div>
  <div class="busy-overlay">
    <div class="busy-pill" role="status" aria-live="polite"><span class="busy-bars" aria-hidden="true"><i style="animation-delay: 0.12s;"></i><i style="animation-delay: 0.24s;"></i><i style="animation-delay: 0.36s;"></i><i style="animation-delay: 0.48s;"></i><i style="animation-delay: 0.6s;"></i></span><span class="busy-label">Writing to device…</span></div>
  </div>
</section>"
`;

exports[`ConfigPanel snapshot > labels the overlay as reading while re-reading the device 1`] = `
"<section class="card" aria-busy="true">
  <div class="card-head">
    <h2>Configuration</h2>
    <div class="row gap"><button class="btn btn-small" disabled=""> Re-read </button><button class="btn btn-small"> Export </button><button class="btn btn-small">Import</button><button class="btn btn-small btn-primary" disabled=""> Apply all to device </button><input type="file" accept="application/json,.json" hidden=""></div>
  </div><label class="field"><span>Operating mode</span><select class="control" disabled="" value="2">
      <option value="0">MIDI Program Change (PC)</option>
      <option value="1">MIDI Control Change (CC)</option>
      <option value="2">Custom (WIP)</option>
      <option value="3">Advanced Custom (WIP)</option>
      <option value="4">Manufacturer Control (WIP)</option>
      <option value="5">Touch Screen (Android) (WIP)</option>
      <option value="6">Video Control</option>
      <option value="7">Keyboard A</option>
      <option value="8">Keyboard B</option>
      <option value="9">Music Player Control</option>
      <option value="10">Custom Keyboard (WIP)</option>
      <option value="11">Mix Key (WIP)</option>
      <option value="12">Speaker (WIP)</option>
    </select></label><!-- ---- mode-specific sub-view ---- -->
  <div class="mode-view">
    <p class="mode-info">Each footswitch sends its own CC number. Toggling sends CC(n,1) on press and CC(n,0) on release.</p>
    <!--v-if-->
    <!-- Program Change A / B -->
    <!-- Custom -->
    <div class="grid grid-4"><label class="field"><span>Footswitch A</span>
        <div class="row gap"><input class="control" type="number" min="0" max="127" placeholder="CC" disabled="" value=""><select class="control" disabled="" value="0">
            <option value="0">Momentary</option>
            <option value="1">Latching</option>
          </select></div>
      </label><label class="field"><span>Footswitch B</span>
        <div class="row gap"><input class="control" type="number" min="0" max="127" placeholder="CC" disabled="" value=""><select class="control" disabled="" value="0">
            <option value="0">Momentary</option>
            <option value="1">Latching</option>
          </select></div>
      </label><label class="field"><span>Footswitch C</span>
        <div class="row gap"><input class="control" type="number" min="0" max="127" placeholder="CC" disabled="" value=""><select class="control" disabled="" value="0">
            <option value="0">Momentary</option>
            <option value="1">Latching</option>
          </select></div>
      </label><label class="field"><span>Footswitch D</span>
        <div class="row gap"><input class="control" type="number" min="0" max="127" placeholder="CC" disabled="" value=""><select class="control" disabled="" value="0">
            <option value="0">Momentary</option>
            <option value="1">Latching</option>
          </select></div>
      </label></div>
    <p class="muted small note"> Press sends CC(n,1), release sends CC(n,0). The device stores a fifth CC slot with no documented footswitch; it is left untouched. </p>
  </div><!-- ---- device-wide settings ---- -->
  <h3>Device-wide settings</h3>
  <div class="grid"><label class="field"><span>MIDI channel</span><select class="control" disabled="" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
        <option value="9">9</option>
        <option value="10">10</option>
        <option value="11">11</option>
        <option value="12">12</option>
        <option value="13">13</option>
        <option value="14">14</option>
        <option value="15">15</option>
        <option value="16">16</option>
      </select></label><label class="field"><span>Max groups</span><select class="control" disabled="" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
      </select></label>
    <div class="field"><span>TRS jack</span>
      <div class="row gap radio-row"><label class="row small"><input type="radio" name="trs-jack" disabled=""> Expression pedal </label><label class="row small"><input type="radio" name="trs-jack" disabled=""> TRS-MIDI </label></div>
    </div><label class="field row"><span>Reverse polarity</span><input type="checkbox" class="switch" disabled=""></label>
  </div>
  <div class="busy-overlay">
    <div class="busy-pill" role="status" aria-live="polite"><span class="busy-bars" aria-hidden="true"><i style="animation-delay: 0.12s;"></i><i style="animation-delay: 0.24s;"></i><i style="animation-delay: 0.36s;"></i><i style="animation-delay: 0.48s;"></i><i style="animation-delay: 0.6s;"></i></span><span class="busy-label">Reading from device…</span></div>
  </div>
</section>"
`;

exports[`ConfigPanel snapshot > renders Advanced Custom mode with banks 1`] = `
"<section class="card">
  <div class="card-head">
    <h2>Configuration</h2>
    <div class="row gap"><button class="btn btn-small"> Re-read </button><button class="btn btn-small"> Export </button><button class="btn btn-small">Import</button><button class="btn btn-small btn-primary"> Apply all to device </button><input type="file" accept="application/json,.json" hidden=""></div>
  </div><label class="field"><span>Operating mode</span><select class="control" value="3">
      <option value="0">MIDI Program Change (PC)</option>
      <option value="1">MIDI Control Change (CC)</option>
      <option value="2">Custom (WIP)</option>
      <option value="3">Advanced Custom (WIP)</option>
      <option value="4">Manufacturer Control (WIP)</option>
      <option value="5">Touch Screen (Android) (WIP)</option>
      <option value="6">Video Control</option>
      <option value="7">Keyboard A</option>
      <option value="8">Keyboard B</option>
      <option value="9">Music Player Control</option>
      <option value="10">Custom Keyboard (WIP)</option>
      <option value="11">Mix Key (WIP)</option>
      <option value="12">Speaker (WIP)</option>
    </select></label><!-- ---- mode-specific sub-view ---- -->
  <div class="mode-view">
    <p class="mode-info">Per-footswitch programmable MIDI codes (PC, CC, Note On/Off, SysEx). Five sub-modes per footswitch: single tap, two-group switching, press-release, long press, short tap + long press.</p>
    <p class="mode-info muted small">Groups are switched by the footswitch sub-mode (two-group switching or press-release); the virtual buttons E (A+B) and F (C+D) do not switch groups.</p><!-- Program Change A / B -->
    <!-- Advanced Custom -->
    <div class="sw-tabs" role="tablist" aria-label="Footswitch"><button class="seg-btn sw-tab active" role="tab" aria-selected="true"> Footswitch A</button><button class="seg-btn sw-tab" role="tab" aria-selected="false"> Footswitch B</button><button class="seg-btn sw-tab" role="tab" aria-selected="false"> Footswitch C</button><button class="seg-btn sw-tab" role="tab" aria-selected="false"> Footswitch D</button></div>
    <section class="bank-editor">
      <div class="bank-head"><span class="bank-title">Footswitch A</span><select class="control narrow-select" value="1">
          <option value="0">Single tap (single group of information)</option>
          <option value="1">Single tap (two groups switching)</option>
          <option value="2">Press-release (two groups switching)</option>
          <option value="3">Long press</option>
          <option value="4">Short tap - long press</option>
        </select></div>
      <div class="seg bank-tabs"><button class="seg-btn active"> Bank A </button><button class="seg-btn"> Bank B </button></div>
      <!--v-if-->
      <ul class="bank-list">
        <li class="bank-row"><span class="mono bank-summary"> [1]&nbsp;&nbsp;CH 2&nbsp;&nbsp;PC&nbsp;&nbsp;5&nbsp;&nbsp;0</span><span class="bank-actions"><button class="btn btn-small"> Edit </button><button class="btn btn-small"> Remove </button></span></li>
        <li class="bank-row"><span class="mono bank-summary"> [2]&nbsp;&nbsp;CH 1&nbsp;&nbsp;Note ON&nbsp;&nbsp;60&nbsp;&nbsp;100</span><span class="bank-actions"><button class="btn btn-small"> Edit </button><button class="btn btn-small"> Remove </button></span></li>
      </ul>
      <div class="row gap bank-tools"><button class="btn btn-small"> Add message </button><button class="btn btn-small"> Remove all </button></div>
      <!--v-if-->
    </section>
  </div><!-- ---- device-wide settings ---- -->
  <h3>Device-wide settings</h3>
  <div class="grid"><label class="field"><span>MIDI channel</span><select class="control" value="5">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
        <option value="9">9</option>
        <option value="10">10</option>
        <option value="11">11</option>
        <option value="12">12</option>
        <option value="13">13</option>
        <option value="14">14</option>
        <option value="15">15</option>
        <option value="16">16</option>
      </select></label><label class="field"><span>Max groups</span><select class="control" value="8">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
      </select></label>
    <div class="field"><span>TRS jack</span>
      <div class="row gap radio-row"><label class="row small"><input type="radio" name="trs-jack"> Expression pedal </label><label class="row small"><input type="radio" name="trs-jack" checked=""> TRS-MIDI </label></div>
    </div><label class="field row"><span>Reverse polarity</span><input type="checkbox" class="switch" checked=""></label>
  </div>
  <!--v-if-->
</section>"
`;

exports[`ConfigPanel snapshot > renders CC mode (B) and uses maxBanksPcB 1`] = `
"<section class="card">
  <div class="card-head">
    <h2>Configuration</h2>
    <div class="row gap"><button class="btn btn-small"> Re-read </button><button class="btn btn-small"> Export </button><button class="btn btn-small">Import</button><button class="btn btn-small btn-primary"> Apply all to device </button><input type="file" accept="application/json,.json" hidden=""></div>
  </div><label class="field"><span>Operating mode</span><select class="control" value="1">
      <option value="0">MIDI Program Change (PC)</option>
      <option value="1">MIDI Control Change (CC)</option>
      <option value="2">Custom (WIP)</option>
      <option value="3">Advanced Custom (WIP)</option>
      <option value="4">Manufacturer Control (WIP)</option>
      <option value="5">Touch Screen (Android) (WIP)</option>
      <option value="6">Video Control</option>
      <option value="7">Keyboard A</option>
      <option value="8">Keyboard B</option>
      <option value="9">Music Player Control</option>
      <option value="10">Custom Keyboard (WIP)</option>
      <option value="11">Mix Key (WIP)</option>
      <option value="12">Speaker (WIP)</option>
    </select></label><!-- ---- mode-specific sub-view ---- -->
  <div class="mode-view">
    <p class="mode-info">Footswitches send CC codes CC(0,0) to CC(127,0); the display shows the current CC code.</p>
    <p class="mode-info muted small">Groups are switched with the virtual buttons E (A+B) and F (C+D).</p><!-- Program Change A / B --><label class="field narrow"><span>Max banks</span><select class="control" value="2">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
        <option value="9">9</option>
        <option value="10">10</option>
        <option value="11">11</option>
        <option value="12">12</option>
        <option value="13">13</option>
        <option value="14">14</option>
        <option value="15">15</option>
        <option value="16">16</option>
        <option value="17">17</option>
        <option value="18">18</option>
        <option value="19">19</option>
        <option value="20">20</option>
        <option value="21">21</option>
        <option value="22">22</option>
        <option value="23">23</option>
        <option value="24">24</option>
        <option value="25">25</option>
        <option value="26">26</option>
        <option value="27">27</option>
        <option value="28">28</option>
        <option value="29">29</option>
        <option value="30">30</option>
        <option value="31">31</option>
        <option value="32">32</option>
      </select></label>
  </div><!-- ---- device-wide settings ---- -->
  <h3>Device-wide settings</h3>
  <div class="grid"><label class="field"><span>MIDI channel</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
        <option value="9">9</option>
        <option value="10">10</option>
        <option value="11">11</option>
        <option value="12">12</option>
        <option value="13">13</option>
        <option value="14">14</option>
        <option value="15">15</option>
        <option value="16">16</option>
      </select></label><label class="field"><span>Max groups</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
      </select></label>
    <div class="field"><span>TRS jack</span>
      <div class="row gap radio-row"><label class="row small"><input type="radio" name="trs-jack"> Expression pedal </label><label class="row small"><input type="radio" name="trs-jack"> TRS-MIDI </label></div>
    </div><label class="field row"><span>Reverse polarity</span><input type="checkbox" class="switch"></label>
  </div>
  <!--v-if-->
</section>"
`;

exports[`ConfigPanel snapshot > renders Custom Keyboard placeholder 1`] = `
"<section class="card">
  <div class="card-head">
    <h2>Configuration</h2>
    <div class="row gap"><button class="btn btn-small"> Re-read </button><button class="btn btn-small"> Export </button><button class="btn btn-small">Import</button><button class="btn btn-small btn-primary"> Apply all to device </button><input type="file" accept="application/json,.json" hidden=""></div>
  </div><label class="field"><span>Operating mode</span><select class="control" value="10">
      <option value="0">MIDI Program Change (PC)</option>
      <option value="1">MIDI Control Change (CC)</option>
      <option value="2">Custom (WIP)</option>
      <option value="3">Advanced Custom (WIP)</option>
      <option value="4">Manufacturer Control (WIP)</option>
      <option value="5">Touch Screen (Android) (WIP)</option>
      <option value="6">Video Control</option>
      <option value="7">Keyboard A</option>
      <option value="8">Keyboard B</option>
      <option value="9">Music Player Control</option>
      <option value="10">Custom Keyboard (WIP)</option>
      <option value="11">Mix Key (WIP)</option>
      <option value="12">Speaker (WIP)</option>
    </select></label><!-- ---- mode-specific sub-view ---- -->
  <div class="mode-view">
    <p class="mode-info">Each footswitch sends a single key or a key combination (Ctrl/Shift/Alt/Win + key). 18 groups are switched with the virtual buttons E (A+B) and F (C+D).</p>
    <!--v-if-->
    <!-- Program Change A / B -->
    <!-- Custom Keyboard -->
    <p class="muted small note"> Key and combination editing is not supported yet. 18 groups are switched with E (A+B) and F (C+D). </p>
  </div><!-- ---- device-wide settings ---- -->
  <h3>Device-wide settings</h3>
  <div class="grid"><label class="field"><span>MIDI channel</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
        <option value="9">9</option>
        <option value="10">10</option>
        <option value="11">11</option>
        <option value="12">12</option>
        <option value="13">13</option>
        <option value="14">14</option>
        <option value="15">15</option>
        <option value="16">16</option>
      </select></label><label class="field"><span>Max groups</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
      </select></label>
    <div class="field"><span>TRS jack</span>
      <div class="row gap radio-row"><label class="row small"><input type="radio" name="trs-jack"> Expression pedal </label><label class="row small"><input type="radio" name="trs-jack"> TRS-MIDI </label></div>
    </div><label class="field row"><span>Reverse polarity</span><input type="checkbox" class="switch"></label>
  </div>
  <!--v-if-->
</section>"
`;

exports[`ConfigPanel snapshot > renders Custom mode with CC/latch values 1`] = `
"<section class="card">
  <div class="card-head">
    <h2>Configuration</h2>
    <div class="row gap"><button class="btn btn-small"> Re-read </button><button class="btn btn-small"> Export </button><button class="btn btn-small">Import</button><button class="btn btn-small btn-primary"> Apply all to device </button><input type="file" accept="application/json,.json" hidden=""></div>
  </div><label class="field"><span>Operating mode</span><select class="control" value="2">
      <option value="0">MIDI Program Change (PC)</option>
      <option value="1">MIDI Control Change (CC)</option>
      <option value="2">Custom (WIP)</option>
      <option value="3">Advanced Custom (WIP)</option>
      <option value="4">Manufacturer Control (WIP)</option>
      <option value="5">Touch Screen (Android) (WIP)</option>
      <option value="6">Video Control</option>
      <option value="7">Keyboard A</option>
      <option value="8">Keyboard B</option>
      <option value="9">Music Player Control</option>
      <option value="10">Custom Keyboard (WIP)</option>
      <option value="11">Mix Key (WIP)</option>
      <option value="12">Speaker (WIP)</option>
    </select></label><!-- ---- mode-specific sub-view ---- -->
  <div class="mode-view">
    <p class="mode-info">Each footswitch sends its own CC number. Toggling sends CC(n,1) on press and CC(n,0) on release.</p>
    <!--v-if-->
    <!-- Program Change A / B -->
    <!-- Custom -->
    <div class="grid grid-4"><label class="field"><span>Footswitch A</span>
        <div class="row gap"><input class="control" type="number" min="0" max="127" placeholder="CC" value="10"><select class="control" value="0">
            <option value="0">Momentary</option>
            <option value="1">Latching</option>
          </select></div>
      </label><label class="field"><span>Footswitch B</span>
        <div class="row gap"><input class="control" type="number" min="0" max="127" placeholder="CC" value="20"><select class="control" value="1">
            <option value="0">Momentary</option>
            <option value="1">Latching</option>
          </select></div>
      </label><label class="field"><span>Footswitch C</span>
        <div class="row gap"><input class="control" type="number" min="0" max="127" placeholder="CC" value="30"><select class="control" value="0">
            <option value="0">Momentary</option>
            <option value="1">Latching</option>
          </select></div>
      </label><label class="field"><span>Footswitch D</span>
        <div class="row gap"><input class="control" type="number" min="0" max="127" placeholder="CC" value="40"><select class="control" value="1">
            <option value="0">Momentary</option>
            <option value="1">Latching</option>
          </select></div>
      </label></div>
    <p class="muted small note"> Press sends CC(n,1), release sends CC(n,0). The device stores a fifth CC slot with no documented footswitch; it is left untouched. </p>
  </div><!-- ---- device-wide settings ---- -->
  <h3>Device-wide settings</h3>
  <div class="grid"><label class="field"><span>MIDI channel</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
        <option value="9">9</option>
        <option value="10">10</option>
        <option value="11">11</option>
        <option value="12">12</option>
        <option value="13">13</option>
        <option value="14">14</option>
        <option value="15">15</option>
        <option value="16">16</option>
      </select></label><label class="field"><span>Max groups</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
      </select></label>
    <div class="field"><span>TRS jack</span>
      <div class="row gap radio-row"><label class="row small"><input type="radio" name="trs-jack"> Expression pedal </label><label class="row small"><input type="radio" name="trs-jack"> TRS-MIDI </label></div>
    </div><label class="field row"><span>Reverse polarity</span><input type="checkbox" class="switch"></label>
  </div>
  <!--v-if-->
</section>"
`;

exports[`ConfigPanel snapshot > renders Keyboard A mode predefined actions 1`] = `
"<section class="card">
  <div class="card-head">
    <h2>Configuration</h2>
    <div class="row gap"><button class="btn btn-small"> Re-read </button><button class="btn btn-small"> Export </button><button class="btn btn-small">Import</button><button class="btn btn-small btn-primary"> Apply all to device </button><input type="file" accept="application/json,.json" hidden=""></div>
  </div><label class="field"><span>Operating mode</span><select class="control" value="7">
      <option value="0">MIDI Program Change (PC)</option>
      <option value="1">MIDI Control Change (CC)</option>
      <option value="2">Custom (WIP)</option>
      <option value="3">Advanced Custom (WIP)</option>
      <option value="4">Manufacturer Control (WIP)</option>
      <option value="5">Touch Screen (Android) (WIP)</option>
      <option value="6">Video Control</option>
      <option value="7">Keyboard A</option>
      <option value="8">Keyboard B</option>
      <option value="9">Music Player Control</option>
      <option value="10">Custom Keyboard (WIP)</option>
      <option value="11">Mix Key (WIP)</option>
      <option value="12">Speaker (WIP)</option>
    </select></label><!-- ---- mode-specific sub-view ---- -->
  <div class="mode-view">
    <p class="mode-info">The footswitches act as keyboard arrow keys:</p>
    <!--v-if-->
    <!-- Program Change A / B -->
    <!-- Predefined actions (for modes with fixed footswitch actions) -->
    <div class="actions-grid">
      <div class="action-cell"><span class="sw">A</span> Up</div>
      <div class="action-cell"><span class="sw">B</span> Down</div>
      <div class="action-cell"><span class="sw">C</span> Left</div>
      <div class="action-cell"><span class="sw">D</span> Right</div>
    </div>
  </div><!-- ---- device-wide settings ---- -->
  <h3>Device-wide settings</h3>
  <div class="grid"><label class="field"><span>MIDI channel</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
        <option value="9">9</option>
        <option value="10">10</option>
        <option value="11">11</option>
        <option value="12">12</option>
        <option value="13">13</option>
        <option value="14">14</option>
        <option value="15">15</option>
        <option value="16">16</option>
      </select></label><label class="field"><span>Max groups</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
      </select></label>
    <div class="field"><span>TRS jack</span>
      <div class="row gap radio-row"><label class="row small"><input type="radio" name="trs-jack"> Expression pedal </label><label class="row small"><input type="radio" name="trs-jack"> TRS-MIDI </label></div>
    </div><label class="field row"><span>Reverse polarity</span><input type="checkbox" class="switch"></label>
  </div>
  <!--v-if-->
</section>"
`;

exports[`ConfigPanel snapshot > renders Keyboard B mode predefined actions 1`] = `
"<section class="card">
  <div class="card-head">
    <h2>Configuration</h2>
    <div class="row gap"><button class="btn btn-small"> Re-read </button><button class="btn btn-small"> Export </button><button class="btn btn-small">Import</button><button class="btn btn-small btn-primary"> Apply all to device </button><input type="file" accept="application/json,.json" hidden=""></div>
  </div><label class="field"><span>Operating mode</span><select class="control" value="8">
      <option value="0">MIDI Program Change (PC)</option>
      <option value="1">MIDI Control Change (CC)</option>
      <option value="2">Custom (WIP)</option>
      <option value="3">Advanced Custom (WIP)</option>
      <option value="4">Manufacturer Control (WIP)</option>
      <option value="5">Touch Screen (Android) (WIP)</option>
      <option value="6">Video Control</option>
      <option value="7">Keyboard A</option>
      <option value="8">Keyboard B</option>
      <option value="9">Music Player Control</option>
      <option value="10">Custom Keyboard (WIP)</option>
      <option value="11">Mix Key (WIP)</option>
      <option value="12">Speaker (WIP)</option>
    </select></label><!-- ---- mode-specific sub-view ---- -->
  <div class="mode-view">
    <p class="mode-info">The footswitches act as keyboard keys:</p>
    <!--v-if-->
    <!-- Program Change A / B -->
    <!-- Predefined actions (for modes with fixed footswitch actions) -->
    <div class="actions-grid">
      <div class="action-cell"><span class="sw">A</span> Page Up</div>
      <div class="action-cell"><span class="sw">B</span> Page Down</div>
      <div class="action-cell"><span class="sw">C</span> Space</div>
      <div class="action-cell"><span class="sw">D</span> Enter</div>
    </div>
  </div><!-- ---- device-wide settings ---- -->
  <h3>Device-wide settings</h3>
  <div class="grid"><label class="field"><span>MIDI channel</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
        <option value="9">9</option>
        <option value="10">10</option>
        <option value="11">11</option>
        <option value="12">12</option>
        <option value="13">13</option>
        <option value="14">14</option>
        <option value="15">15</option>
        <option value="16">16</option>
      </select></label><label class="field"><span>Max groups</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
      </select></label>
    <div class="field"><span>TRS jack</span>
      <div class="row gap radio-row"><label class="row small"><input type="radio" name="trs-jack"> Expression pedal </label><label class="row small"><input type="radio" name="trs-jack"> TRS-MIDI </label></div>
    </div><label class="field row"><span>Reverse polarity</span><input type="checkbox" class="switch"></label>
  </div>
  <!--v-if-->
</section>"
`;

exports[`ConfigPanel snapshot > renders Manufacturer Control mode (no sub-view) 1`] = `
"<section class="card">
  <div class="card-head">
    <h2>Configuration</h2>
    <div class="row gap"><button class="btn btn-small"> Re-read </button><button class="btn btn-small"> Export </button><button class="btn btn-small">Import</button><button class="btn btn-small btn-primary"> Apply all to device </button><input type="file" accept="application/json,.json" hidden=""></div>
  </div><label class="field"><span>Operating mode</span><select class="control" value="4">
      <option value="0">MIDI Program Change (PC)</option>
      <option value="1">MIDI Control Change (CC)</option>
      <option value="2">Custom (WIP)</option>
      <option value="3">Advanced Custom (WIP)</option>
      <option value="4">Manufacturer Control (WIP)</option>
      <option value="5">Touch Screen (Android) (WIP)</option>
      <option value="6">Video Control</option>
      <option value="7">Keyboard A</option>
      <option value="8">Keyboard B</option>
      <option value="9">Music Player Control</option>
      <option value="10">Custom Keyboard (WIP)</option>
      <option value="11">Mix Key (WIP)</option>
      <option value="12">Speaker (WIP)</option>
    </select></label><!-- ---- mode-specific sub-view ---- -->
  <div class="mode-view">
    <p class="mode-info">Internal mode for controlling M-VAVE brand products such as TANK-G, LOOPER PRO and LOST TEMPO.</p>
    <!--v-if-->
    <!-- Program Change A / B -->
    <!--v-if-->
  </div><!-- ---- device-wide settings ---- -->
  <h3>Device-wide settings</h3>
  <div class="grid"><label class="field"><span>MIDI channel</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
        <option value="9">9</option>
        <option value="10">10</option>
        <option value="11">11</option>
        <option value="12">12</option>
        <option value="13">13</option>
        <option value="14">14</option>
        <option value="15">15</option>
        <option value="16">16</option>
      </select></label><label class="field"><span>Max groups</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
      </select></label>
    <div class="field"><span>TRS jack</span>
      <div class="row gap radio-row"><label class="row small"><input type="radio" name="trs-jack"> Expression pedal </label><label class="row small"><input type="radio" name="trs-jack"> TRS-MIDI </label></div>
    </div><label class="field row"><span>Reverse polarity</span><input type="checkbox" class="switch"></label>
  </div>
  <!--v-if-->
</section>"
`;

exports[`ConfigPanel snapshot > renders Mix Key placeholder 1`] = `
"<section class="card">
  <div class="card-head">
    <h2>Configuration</h2>
    <div class="row gap"><button class="btn btn-small"> Re-read </button><button class="btn btn-small"> Export </button><button class="btn btn-small">Import</button><button class="btn btn-small btn-primary"> Apply all to device </button><input type="file" accept="application/json,.json" hidden=""></div>
  </div><label class="field"><span>Operating mode</span><select class="control" value="11">
      <option value="0">MIDI Program Change (PC)</option>
      <option value="1">MIDI Control Change (CC)</option>
      <option value="2">Custom (WIP)</option>
      <option value="3">Advanced Custom (WIP)</option>
      <option value="4">Manufacturer Control (WIP)</option>
      <option value="5">Touch Screen (Android) (WIP)</option>
      <option value="6">Video Control</option>
      <option value="7">Keyboard A</option>
      <option value="8">Keyboard B</option>
      <option value="9">Music Player Control</option>
      <option value="10">Custom Keyboard (WIP)</option>
      <option value="11">Mix Key (WIP)</option>
      <option value="12">Speaker (WIP)</option>
    </select></label><!-- ---- mode-specific sub-view ---- -->
  <div class="mode-view">
    <p class="mode-info">Each footswitch has three selectable functions: Custom MIDI, Custom Keyboard and Tuner. E and F switch groups.</p>
    <!--v-if-->
    <!-- Program Change A / B -->
    <!-- Mix Key -->
    <p class="muted small note">Per-switch function editing is not supported yet.</p>
  </div><!-- ---- device-wide settings ---- -->
  <h3>Device-wide settings</h3>
  <div class="grid"><label class="field"><span>MIDI channel</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
        <option value="9">9</option>
        <option value="10">10</option>
        <option value="11">11</option>
        <option value="12">12</option>
        <option value="13">13</option>
        <option value="14">14</option>
        <option value="15">15</option>
        <option value="16">16</option>
      </select></label><label class="field"><span>Max groups</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
      </select></label>
    <div class="field"><span>TRS jack</span>
      <div class="row gap radio-row"><label class="row small"><input type="radio" name="trs-jack"> Expression pedal </label><label class="row small"><input type="radio" name="trs-jack"> TRS-MIDI </label></div>
    </div><label class="field row"><span>Reverse polarity</span><input type="checkbox" class="switch"></label>
  </div>
  <!--v-if-->
</section>"
`;

exports[`ConfigPanel snapshot > renders Music Player mode predefined actions 1`] = `
"<section class="card">
  <div class="card-head">
    <h2>Configuration</h2>
    <div class="row gap"><button class="btn btn-small"> Re-read </button><button class="btn btn-small"> Export </button><button class="btn btn-small">Import</button><button class="btn btn-small btn-primary"> Apply all to device </button><input type="file" accept="application/json,.json" hidden=""></div>
  </div><label class="field"><span>Operating mode</span><select class="control" value="9">
      <option value="0">MIDI Program Change (PC)</option>
      <option value="1">MIDI Control Change (CC)</option>
      <option value="2">Custom (WIP)</option>
      <option value="3">Advanced Custom (WIP)</option>
      <option value="4">Manufacturer Control (WIP)</option>
      <option value="5">Touch Screen (Android) (WIP)</option>
      <option value="6">Video Control</option>
      <option value="7">Keyboard A</option>
      <option value="8">Keyboard B</option>
      <option value="9">Music Player Control</option>
      <option value="10">Custom Keyboard (WIP)</option>
      <option value="11">Mix Key (WIP)</option>
      <option value="12">Speaker (WIP)</option>
    </select></label><!-- ---- mode-specific sub-view ---- -->
  <div class="mode-view">
    <p class="mode-info">The footswitches act as multimedia keys:</p>
    <!--v-if-->
    <!-- Program Change A / B -->
    <!-- Predefined actions (for modes with fixed footswitch actions) -->
    <div class="actions-grid">
      <div class="action-cell"><span class="sw">A</span> Previous track</div>
      <div class="action-cell"><span class="sw">B</span> Next track</div>
      <div class="action-cell"><span class="sw">C</span> Volume down</div>
      <div class="action-cell"><span class="sw">D</span> Volume up</div>
    </div>
  </div><!-- ---- device-wide settings ---- -->
  <h3>Device-wide settings</h3>
  <div class="grid"><label class="field"><span>MIDI channel</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
        <option value="9">9</option>
        <option value="10">10</option>
        <option value="11">11</option>
        <option value="12">12</option>
        <option value="13">13</option>
        <option value="14">14</option>
        <option value="15">15</option>
        <option value="16">16</option>
      </select></label><label class="field"><span>Max groups</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
      </select></label>
    <div class="field"><span>TRS jack</span>
      <div class="row gap radio-row"><label class="row small"><input type="radio" name="trs-jack"> Expression pedal </label><label class="row small"><input type="radio" name="trs-jack"> TRS-MIDI </label></div>
    </div><label class="field row"><span>Reverse polarity</span><input type="checkbox" class="switch"></label>
  </div>
  <!--v-if-->
</section>"
`;

exports[`ConfigPanel snapshot > renders PC mode (A) with device-wide settings 1`] = `
"<section class="card">
  <div class="card-head">
    <h2>Configuration</h2>
    <div class="row gap"><button class="btn btn-small"> Re-read </button><button class="btn btn-small"> Export </button><button class="btn btn-small">Import</button><button class="btn btn-small btn-primary"> Apply all to device </button><input type="file" accept="application/json,.json" hidden=""></div>
  </div><label class="field"><span>Operating mode</span><select class="control" value="0">
      <option value="0">MIDI Program Change (PC)</option>
      <option value="1">MIDI Control Change (CC)</option>
      <option value="2">Custom (WIP)</option>
      <option value="3">Advanced Custom (WIP)</option>
      <option value="4">Manufacturer Control (WIP)</option>
      <option value="5">Touch Screen (Android) (WIP)</option>
      <option value="6">Video Control</option>
      <option value="7">Keyboard A</option>
      <option value="8">Keyboard B</option>
      <option value="9">Music Player Control</option>
      <option value="10">Custom Keyboard (WIP)</option>
      <option value="11">Mix Key (WIP)</option>
      <option value="12">Speaker (WIP)</option>
    </select></label><!-- ---- mode-specific sub-view ---- -->
  <div class="mode-view">
    <p class="mode-info">Footswitches send Program Change codes 0-127; the display shows the current PC code.</p>
    <p class="mode-info muted small">Groups are switched with the virtual buttons E (A+B) and F (C+D).</p><!-- Program Change A / B --><label class="field narrow"><span>Max banks</span><select class="control" value="8">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
        <option value="9">9</option>
        <option value="10">10</option>
        <option value="11">11</option>
        <option value="12">12</option>
        <option value="13">13</option>
        <option value="14">14</option>
        <option value="15">15</option>
        <option value="16">16</option>
        <option value="17">17</option>
        <option value="18">18</option>
        <option value="19">19</option>
        <option value="20">20</option>
        <option value="21">21</option>
        <option value="22">22</option>
        <option value="23">23</option>
        <option value="24">24</option>
        <option value="25">25</option>
        <option value="26">26</option>
        <option value="27">27</option>
        <option value="28">28</option>
        <option value="29">29</option>
        <option value="30">30</option>
        <option value="31">31</option>
        <option value="32">32</option>
      </select></label>
  </div><!-- ---- device-wide settings ---- -->
  <h3>Device-wide settings</h3>
  <div class="grid"><label class="field"><span>MIDI channel</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
        <option value="9">9</option>
        <option value="10">10</option>
        <option value="11">11</option>
        <option value="12">12</option>
        <option value="13">13</option>
        <option value="14">14</option>
        <option value="15">15</option>
        <option value="16">16</option>
      </select></label><label class="field"><span>Max groups</span><select class="control" value="4">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
      </select></label>
    <div class="field"><span>TRS jack</span>
      <div class="row gap radio-row"><label class="row small"><input type="radio" name="trs-jack" checked=""> Expression pedal </label><label class="row small"><input type="radio" name="trs-jack"> TRS-MIDI </label></div>
    </div><label class="field row"><span>Reverse polarity</span><input type="checkbox" class="switch"></label>
  </div>
  <!--v-if-->
</section>"
`;

exports[`ConfigPanel snapshot > renders Speaker mode (no sub-view) 1`] = `
"<section class="card">
  <div class="card-head">
    <h2>Configuration</h2>
    <div class="row gap"><button class="btn btn-small"> Re-read </button><button class="btn btn-small"> Export </button><button class="btn btn-small">Import</button><button class="btn btn-small btn-primary"> Apply all to device </button><input type="file" accept="application/json,.json" hidden=""></div>
  </div><label class="field"><span>Operating mode</span><select class="control" value="12">
      <option value="0">MIDI Program Change (PC)</option>
      <option value="1">MIDI Control Change (CC)</option>
      <option value="2">Custom (WIP)</option>
      <option value="3">Advanced Custom (WIP)</option>
      <option value="4">Manufacturer Control (WIP)</option>
      <option value="5">Touch Screen (Android) (WIP)</option>
      <option value="6">Video Control</option>
      <option value="7">Keyboard A</option>
      <option value="8">Keyboard B</option>
      <option value="9">Music Player Control</option>
      <option value="10">Custom Keyboard (WIP)</option>
      <option value="11">Mix Key (WIP)</option>
      <option value="12">Speaker (WIP)</option>
    </select></label><!-- ---- mode-specific sub-view ---- -->
  <div class="mode-view">
    <p class="mode-info">Controls M-VAVE speaker products. Not covered by the official manual - the footswitch actions are fixed by the device.</p>
    <!--v-if-->
    <!-- Program Change A / B -->
    <!--v-if-->
  </div><!-- ---- device-wide settings ---- -->
  <h3>Device-wide settings</h3>
  <div class="grid"><label class="field"><span>MIDI channel</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
        <option value="9">9</option>
        <option value="10">10</option>
        <option value="11">11</option>
        <option value="12">12</option>
        <option value="13">13</option>
        <option value="14">14</option>
        <option value="15">15</option>
        <option value="16">16</option>
      </select></label><label class="field"><span>Max groups</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
      </select></label>
    <div class="field"><span>TRS jack</span>
      <div class="row gap radio-row"><label class="row small"><input type="radio" name="trs-jack"> Expression pedal </label><label class="row small"><input type="radio" name="trs-jack"> TRS-MIDI </label></div>
    </div><label class="field row"><span>Reverse polarity</span><input type="checkbox" class="switch"></label>
  </div>
  <!--v-if-->
</section>"
`;

exports[`ConfigPanel snapshot > renders Touch Screen mode predefined actions 1`] = `
"<section class="card">
  <div class="card-head">
    <h2>Configuration</h2>
    <div class="row gap"><button class="btn btn-small"> Re-read </button><button class="btn btn-small"> Export </button><button class="btn btn-small">Import</button><button class="btn btn-small btn-primary"> Apply all to device </button><input type="file" accept="application/json,.json" hidden=""></div>
  </div><label class="field"><span>Operating mode</span><select class="control" value="5">
      <option value="0">MIDI Program Change (PC)</option>
      <option value="1">MIDI Control Change (CC)</option>
      <option value="2">Custom (WIP)</option>
      <option value="3">Advanced Custom (WIP)</option>
      <option value="4">Manufacturer Control (WIP)</option>
      <option value="5">Touch Screen (Android) (WIP)</option>
      <option value="6">Video Control</option>
      <option value="7">Keyboard A</option>
      <option value="8">Keyboard B</option>
      <option value="9">Music Player Control</option>
      <option value="10">Custom Keyboard (WIP)</option>
      <option value="11">Mix Key (WIP)</option>
      <option value="12">Speaker (WIP)</option>
    </select></label><!-- ---- mode-specific sub-view ---- -->
  <div class="mode-view">
    <p class="mode-info">The footswitches control the touchscreen of a connected Android device:</p>
    <!--v-if-->
    <!-- Program Change A / B -->
    <!-- Predefined actions (for modes with fixed footswitch actions) -->
    <div class="actions-grid">
      <div class="action-cell"><span class="sw">A</span> Swipe up</div>
      <div class="action-cell"><span class="sw">B</span> Swipe down</div>
      <div class="action-cell"><span class="sw">C</span> Swipe left</div>
      <div class="action-cell"><span class="sw">D</span> Swipe right</div>
    </div>
  </div><!-- ---- device-wide settings ---- -->
  <h3>Device-wide settings</h3>
  <div class="grid"><label class="field"><span>MIDI channel</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
        <option value="9">9</option>
        <option value="10">10</option>
        <option value="11">11</option>
        <option value="12">12</option>
        <option value="13">13</option>
        <option value="14">14</option>
        <option value="15">15</option>
        <option value="16">16</option>
      </select></label><label class="field"><span>Max groups</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
      </select></label>
    <div class="field"><span>TRS jack</span>
      <div class="row gap radio-row"><label class="row small"><input type="radio" name="trs-jack"> Expression pedal </label><label class="row small"><input type="radio" name="trs-jack"> TRS-MIDI </label></div>
    </div><label class="field row"><span>Reverse polarity</span><input type="checkbox" class="switch"></label>
  </div>
  <!--v-if-->
</section>"
`;

exports[`ConfigPanel snapshot > renders Video Control mode predefined actions 1`] = `
"<section class="card">
  <div class="card-head">
    <h2>Configuration</h2>
    <div class="row gap"><button class="btn btn-small"> Re-read </button><button class="btn btn-small"> Export </button><button class="btn btn-small">Import</button><button class="btn btn-small btn-primary"> Apply all to device </button><input type="file" accept="application/json,.json" hidden=""></div>
  </div><label class="field"><span>Operating mode</span><select class="control" value="6">
      <option value="0">MIDI Program Change (PC)</option>
      <option value="1">MIDI Control Change (CC)</option>
      <option value="2">Custom (WIP)</option>
      <option value="3">Advanced Custom (WIP)</option>
      <option value="4">Manufacturer Control (WIP)</option>
      <option value="5">Touch Screen (Android) (WIP)</option>
      <option value="6">Video Control</option>
      <option value="7">Keyboard A</option>
      <option value="8">Keyboard B</option>
      <option value="9">Music Player Control</option>
      <option value="10">Custom Keyboard (WIP)</option>
      <option value="11">Mix Key (WIP)</option>
      <option value="12">Speaker (WIP)</option>
    </select></label><!-- ---- mode-specific sub-view ---- -->
  <div class="mode-view">
    <p class="mode-info">The footswitches control video playback (e.g. YouTube):</p>
    <!--v-if-->
    <!-- Program Change A / B -->
    <!-- Predefined actions (for modes with fixed footswitch actions) -->
    <div class="actions-grid">
      <div class="action-cell"><span class="sw">A</span> Rewind</div>
      <div class="action-cell"><span class="sw">B</span> Fast forward</div>
      <div class="action-cell"><span class="sw">C</span> Pause/Play</div>
      <div class="action-cell"><span class="sw">D</span> Loop</div>
    </div>
  </div><!-- ---- device-wide settings ---- -->
  <h3>Device-wide settings</h3>
  <div class="grid"><label class="field"><span>MIDI channel</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
        <option value="9">9</option>
        <option value="10">10</option>
        <option value="11">11</option>
        <option value="12">12</option>
        <option value="13">13</option>
        <option value="14">14</option>
        <option value="15">15</option>
        <option value="16">16</option>
      </select></label><label class="field"><span>Max groups</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
      </select></label>
    <div class="field"><span>TRS jack</span>
      <div class="row gap radio-row"><label class="row small"><input type="radio" name="trs-jack"> Expression pedal </label><label class="row small"><input type="radio" name="trs-jack"> TRS-MIDI </label></div>
    </div><label class="field row"><span>Reverse polarity</span><input type="checkbox" class="switch"></label>
  </div>
  <!--v-if-->
</section>"
`;

exports[`ConfigPanel snapshot > renders a null mode as an empty config with controls disabled 1`] = `
"<section class="card">
  <div class="card-head">
    <h2>Configuration</h2>
    <div class="row gap"><button class="btn btn-small"> Re-read </button><button class="btn btn-small"> Export </button><button class="btn btn-small">Import</button><button class="btn btn-small btn-primary"> Apply all to device </button><input type="file" accept="application/json,.json" hidden=""></div>
  </div><label class="field"><span>Operating mode</span><select class="control" value="0">
      <option value="0">MIDI Program Change (PC)</option>
      <option value="1">MIDI Control Change (CC)</option>
      <option value="2">Custom (WIP)</option>
      <option value="3">Advanced Custom (WIP)</option>
      <option value="4">Manufacturer Control (WIP)</option>
      <option value="5">Touch Screen (Android) (WIP)</option>
      <option value="6">Video Control</option>
      <option value="7">Keyboard A</option>
      <option value="8">Keyboard B</option>
      <option value="9">Music Player Control</option>
      <option value="10">Custom Keyboard (WIP)</option>
      <option value="11">Mix Key (WIP)</option>
      <option value="12">Speaker (WIP)</option>
    </select></label><!-- ---- mode-specific sub-view ---- -->
  <!--v-if-->
  <!-- ---- device-wide settings ---- -->
  <h3>Device-wide settings</h3>
  <div class="grid"><label class="field"><span>MIDI channel</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
        <option value="9">9</option>
        <option value="10">10</option>
        <option value="11">11</option>
        <option value="12">12</option>
        <option value="13">13</option>
        <option value="14">14</option>
        <option value="15">15</option>
        <option value="16">16</option>
      </select></label><label class="field"><span>Max groups</span><select class="control" value="1">
        <option value="1">1</option>
        <option value="2">2</option>
        <option value="3">3</option>
        <option value="4">4</option>
        <option value="5">5</option>
        <option value="6">6</option>
        <option value="7">7</option>
        <option value="8">8</option>
      </select></label>
    <div class="field"><span>TRS jack</span>
      <div class="row gap radio-row"><label class="row small"><input type="radio" name="trs-jack"> Expression pedal </label><label class="row small"><input type="radio" name="trs-jack"> TRS-MIDI </label></div>
    </div><label class="field row"><span>Reverse polarity</span><input type="checkbox" class="switch"></label>
  </div>
  <!--v-if-->
</section>"
`;

exports[`ConfigPanel snapshot > shows the placeholder when no device is connected 1`] = `
"<section class="card">
  <div class="card-head">
    <h2>Configuration</h2>
    <div class="row gap"><button class="btn btn-small" disabled=""> Re-read </button><button class="btn btn-small" disabled=""> Export </button><button class="btn btn-small" disabled="">Import</button><button class="btn btn-small btn-primary" disabled=""> Apply all to device </button><input type="file" accept="application/json,.json" hidden=""></div>
  </div>
  <p class="muted empty"> Connect a device to read and change its configuration. </p>
  <!--v-if-->
</section>"
`;
